# my-assistant

./: Cargo.toml  data.db  req.sh
src/: db.rs  lib.rs  main.rs  model.rs  pdf.rs  server.rs
