[package]
name = "my-assitant"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version =  "0.12.23", features = ["json"]}
tokio = { version = "1.47.1", features = ["full"]}
serde = { version = "1"}
sqlx = { version = "0.8.6", features = ["sqlite"] }
pdf-extract = "0.9.0"
oxidize-pdf = "1.1.0"
time = {version = "0.3.44", features= ["macros"]}
bytes = "1.10.1"
strum_macros = "0.27.2"
strum = "0.27.2"
serde_json = "1.0.145"
